force-app/main/default/objects/KT_DocumentVault__c/KT_DocumentVault__c.object-meta.xml
<CustomObject>
    <description>Per-onboardee document store index for B4. Links onboarding records to Salesforce Files and tracks vault lifecycle, versioning, OCR, signature, and expiry status.</description>
    <label>KT Document Vault</label>
    <nameField>
        <displayFormat>DVAULT-{000000}</displayFormat>
        <label>Document Vault Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>KT Document Vault</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>