force-app/main/default/objects/KT_DocumentVault__c/fields/Content_Document_Id__c.field-meta.xml
<CustomField>
    <fullName>Content_Document_Id__c</fullName>
    <description>Salesforce ContentDocument Id used to retrieve the latest ContentVersion.</description>
    <label>Content Document Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>