force-app/main/default/objects/KT_DocumentVault__c/fields/Document_Name__c.field-meta.xml
<CustomField>
    <fullName>Document_Name__c</fullName>
    <description>Display name of the document. This may differ from the ContentDocument title.</description>
    <label>Document Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>