force-app/main/default/objects/KT_DocumentVault__c/fields/Document_Request__c.field-meta.xml
<CustomField>
    <fullName>Document_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Checklist item that required this document.</description>
    <label>Document Request</label>
    <referenceTo>KT_Document_Request__c</referenceTo>
    <relationshipLabel>Document Vault Entries</relationshipLabel>
    <relationshipName>DocumentVaultEntries</relationshipName>
    <type>Lookup</type>
</CustomField>