force-app/main/default/objects/KT_DocumentVault__c/fields/Document_Type__c.field-meta.xml
<CustomField>
    <fullName>Document_Type__c</fullName>
    <description>Classifies the document stored in the vault.</description>
    <label>Document Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Generated</fullName>
                <default>true</default>
                <label>Generated</label>
            </value>
            <value>
                <fullName>Uploaded</fullName>
            </value>
            <value>
                <fullName>External</fullName>
            </value>
            <value>
                <fullName>Certificate</fullName>
            </value>
            <value>
                <fullName>Identity Document</fullName>
            </value>
            <value>
                <fullName>Compliance Record</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>