force-app/main/default/objects/KT_DocumentVault__c/fields/Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Expiry_Date__c</fullName>
    <description>Expiry date for certificates, licenses, and other documents with defined validity periods.</description>
    <label>Expiry Date</label>
    <type>Date</type>
</CustomField>