force-app/main/default/objects/KT_DocumentVault__c/fields/Is_Expired__c.field-meta.xml
<CustomField>
    <fullName>Is_Expired__c</fullName>
    <description>True when the vault entry has an expiry date in the past.</description>
    <formula>AND(NOT(ISBLANK(Expiry_Date__c)), TODAY() &gt; Expiry_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsBlank</formulaTreatBlanksAs>
    <label>Is Expired</label>
    <type>Checkbox</type>
</CustomField>