force-app/main/default/objects/KT_DocumentVault__c/fields/KT_Onboarding__c.field-meta.xml
<CustomField>
    <fullName>KT_Onboarding__c</fullName>
    <description>Parent onboarding record for this vault entry.</description>
    <label>KT Onboarding</label>
    <referenceTo>KT_Onboarding__c</referenceTo>
    <relationshipLabel>Document Vault Entries</relationshipLabel>
    <relationshipName>DocumentVaultEntries</relationshipName>
    <type>MasterDetail</type>
</CustomField>