force-app/main/default/objects/KT_DocumentVault__c/fields/Regulatory_Tag__c.field-meta.xml
<CustomField>
    <fullName>Regulatory_Tag__c</fullName>
    <description>Regulatory frameworks this document satisfies. Populated from template metadata on generation.</description>
    <label>Regulatory Tag</label>
    <length>255</length>
    <type>Text</type>
</CustomField>