force-app/main/default/objects/KT_DocumentVault__c/fields/Signature_Status__c.field-meta.xml
<CustomField>
    <fullName>Signature_Status__c</fullName>
    <description>Signature lifecycle status for the vault document.</description>
    <label>Signature Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Required</fullName>
                <default>true</default>
                <label>Not Required</label>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Partially Signed</fullName>
            </value>
            <value>
                <fullName>Fully Signed</fullName>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
            <value>
                <fullName>Delegated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>