force-app/main/default/objects/KT_DocumentVault__c/fields/Upload_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Upload_Timestamp__c</fullName>
    <description>Timestamp when the document was added to the vault.</description>
    <label>Upload Timestamp</label>
    <type>DateTime</type>
</CustomField>