force-app/main/default/objects/KT_DocumentVault__c/fields/Uploaded_By__c.field-meta.xml
<CustomField>
    <fullName>Uploaded_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User who added this document to the vault.</description>
    <label>Uploaded By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Uploaded Document Vault Entries</relationshipLabel>
    <relationshipName>UploadedDocumentVaultEntries</relationshipName>
    <type>Lookup</type>
</CustomField>