force-app/main/default/objects/KT_DocumentVault__c/fields/Version_Number__c.field-meta.xml
<CustomField>
    <fullName>Version_Number__c</fullName>
    <defaultValue>1</defaultValue>
    <description>Document version number, incremented on each replace or update.</description>
    <label>Version Number</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>